--- a/src/app.conf
+++ b/src/app.conf
@@ -6,6 +6,7 @@ server.socket_port: 8080
 tools.staticdir.root = os.path.abspath(os.path.join(os.getcwd(), 'static'))
 tools.staticdir.on: True
 tools.staticdir.dir: ""
+tools.staticdir.index = "index.html"
 
 [/admin]
 tools.staticdir.root = os.path.abspath(os.path.join(os.getcwd(), 'static/admin'))
