--- a/src/app.conf
+++ b/src/app.conf
@@ -12,3 +12,8 @@ tools.staticdir.index = "index.html"
 tools.staticdir.root = os.path.abspath(os.path.join(os.getcwd(), 'static/admin'))
 tools.staticdir.on: True
 tools.staticdir.dir: ""
+tools.staticdir.index = os.path.abspath(os.path.join(os.getcwd(), 'static/admin/index.html'))
+
+#[/favicon.ico]
+#tools.staticfile.on: True
+#tools.staticfile.filename: "/path/to/myfavicon.ico"
